tests/baselines/reference/genericCallsWithoutParens.errors.txt
tests/cases/compiler/genericCallsWithoutParens.ts(2,18): error TS1005: '(' expected.
tests/cases/compiler/genericCallsWithoutParens.ts(7,8): error TS1384: A 'new' expression with type arguments must always be followed by a parenthesized argument list.


==== tests/cases/compiler/genericCallsWithoutParens.ts (2 errors) ====
    function f<T>() { }
    var r = f<number>; // parse error
                     ~
!!! error TS1005: '(' expected.
    
    class C<T> {
        foo: T;
    }
    var c = new C<number>; // parse error
           ~~~~~~~~~~~~~~
!!! error TS1384: A 'new' expression with type arguments must always be followed by a parenthesized argument list.
    
    